Ajout d'un évènement de déplaçement sur les personnages, tentative d'ajout de tours de jeu, correction sur les positions des personnages (parseInt dans grid.js)

--- a/etape 2/css/style.css
+++ b/etape 2/css/style.css
@@ -51,3 +51,7 @@
     background-image: url(../images/fist.png);
     background-repeat: no-repeat;
 }
+
+.mobility {
+    background-color: firebrick;
+}
