Fin de l'étape 2 : !important sur les .class robot pour remplacer celle des armes, ajout de l'attribut classCSS pour les armes et les robots afin de les sélectionner plus facilement, fonction  fléchée (=>) pour garder le contexte de la class Robot (this ==  robot), fonctions changePosition(target) et checkWeapon(target) qui prennent en paramètre target qui est égal à e.currentTarget (on récupère la valeur du click)

--- a/etape 2/css/style.css
+++ b/etape 2/css/style.css
@@ -13,12 +13,12 @@
 }
 
 .robot0 {
-    background-image: url(../images/robot0.png);
+    background-image: url(../images/robot0.png) !important;
     background-repeat: no-repeat;
 }
 
 .robot1 {
-    background-image: url(../images/robot1.png);
+    background-image: url(../images/robot1.png) !important;
     background-repeat: no-repeat;
 }
 
