fonction newGame() qui demande si on veut refaire une partie

--- a/etape 3/css/style.css
+++ b/etape 3/css/style.css
@@ -12,6 +12,10 @@
     display: inline-block;
 }
 
+button.ui-button.ui-corner-all.ui-widget.ui-button-icon-only.ui-dialog-titlebar-close {
+    display: none;
+}
+
 .robot0 {
     background-image: url(../images/robot0.png) !important;
     background-repeat: no-repeat;
