Réorganisation du code (game.js) ajout des informations des joueurs dans l'HTML

--- a/etape 3/css/style.css
+++ b/etape 3/css/style.css
@@ -1,7 +1,15 @@
+body {
+    display: inline-flex;
+    width: 100%;
+}
+
+.player1, .player2 {
+    text-align: center;
+}
+
 .board {
     border: solid black 1px;
     text-align: center;
-    width: 100%;
     height: auto;
 }
 
