--- a/etape 3/css/style.css
+++ b/etape 3/css/style.css
@@ -67,3 +67,7 @@ button.ui-button.ui-corner-all.ui-widget.ui-button-icon-only.ui-dialog-titlebar-
 .mobility {
     background-color: mediumseagreen;
 }
+
+.mobility:hover {
+    background-color: aquamarine;
+}
